import java.util.Scanner;

class ConsoleReader {

    public String getRequest() {
    	return new Scanner(System.in).nextLine();
    }

}